k8s/tekline/resources/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: tekline
spec: {}
status: {}
